module(name = "llvm-ml-py")

bazel_dep(name = "rules_python", version = "0.24.0")
bazel_dep(name = "llvm-ml-libs", version = "")

non_module_dependencies = use_extension("@llvm-ml-libs//:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "capnp-cpp")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

use_repo(python, "python_3_10", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "llvm_ml_py_pip",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock_3_10.txt",
    requirements_windows = "//:requirements_windows_3_10.txt",
)

use_repo(pip, "llvm_ml_py_pip")
